<resources>
    <string name="app_name">CBRN Protector</string>
    <string name="navigation_home">Головна</string>
    <string name="navigation_rif">Rну</string>
    <string name="navigation_hostiles_indicator">R0</string>
    <string name="navigation_v0">V0</string>
    <string name="navigation_En">En</string>
    <string name="navigation_Rrhz">Rрхз</string>
    <string name="navigation_RrhzCrit">Критичне Rрхз</string>
    <string name="navigation_EhbryaNec">Eхбря необхідне</string>
    <string name="navigation_Ehbrya0">Eхбря нульове</string>
    <string name="navigation_Whbrya">Wхбря</string>
    <string name="navigation_Wvo">Wво</string>
    <string name="navigation_Wpg">Wпж</string>
    <string name="navigation_Wln">Wлн</string>
    <string name="navigation_Prhz">Pрхз</string>
    <string name="navigation_Kn">Kn</string>
    <string name="navigation_Vrhz">Vрхз</string>
    <string name="navigation_Cn">Cn</string>
    <string name="navigation_Ehbrya">Eхбря</string>
    <string name="navigation_V0Mod">V0 мод</string>
    <string name="navigation_Rv">Rв</string>
    <string name="navigation_Vhbrya_rhz_op">V ХБРЯ рхз оп</string>
    <string name="navigation_Pv">Pв</string>
    <string name="navigation_Vv">Vв</string>
    <string name="navigation_RV">Rв</string>
    <string name="navigation_R0_mod">R0 мод</string>
    <string name="navigation_Kiob">Kіоб</string>
    <string name="navigation_E0am">E АМ нульове</string>
    <string name="navigation_Pvam">Pв АМ</string>
    <string name="navigation_RV_crit">Rв критичне</string>
    <string name="navigation_E_neo_am">E АМ необхідне</string>
    <string name="navigation_header_title">Menu</string>
    <string name="calculate">Розрахувати</string>
    <string name="clear_data">Скинути дані</string>
    <string name="error_not_enough_data">Введіть усі необхідні дані</string>
    <string name="risk_level_text">Від %1$s до %2$s</string>
    <string name="very_high_level">Надзвичайно високий</string>
    <string name="high_level">Високий</string>
    <string name="medium_level">Помірний</string>
    <string name="low_level">Низький</string>
    <string name="select_damage_degree">Оберіть ступінь ураження</string>
    <string name="minor_damage">Незначне ураження</string>
    <string name="borderline_damage">Граничне ураження</string>
    <string name="critical_damage">Критичне ураження</string>
    <string name="catastrophic_damage">Катастрофічне ураження</string>
    <string name="choose_probability">Оберіть імовірність</string>
    <string name="unlikely_probability">Малоймовірне влучання</string>
    <string name="rare_probability">Рідке влучання</string>
    <string name="sometimes_probability">Іноді влучає</string>
    <string name="probable_probability">Імовірне влучання</string>
    <string name="frequent_probability">Часте влучання</string>
    <string name="rif_title">Показник ймовірного ризику недостатнього рівня ураження РПВ об\'єктів противника</string>
    <string name="rif_probability">Імовірність влучення ТББ у об\'єкти противника</string>
    <string name="rif_damage_level">Ступінь ураження об\'єктів противника РПВ</string>
    <string name="et_hint">Введіть кількість</string>
    <string name="number_format_error">Неправильний формат даних</string>
    <string name="number_out_of_range">Некоректні дані. Ймовірність не може бути від\'ємною або більше одиниці.</string>
    <string name="Nivt_Nos_error">Загальна кількість особового складу не може бути менша за кількість особового складу військової частини, яка ймовірно втратить життя та здоров’я в умовах РХ зараження</string>
    <string name="R0_Rn_error">Імовірний ризик досягнення мети бойових дій не може бути меншим за допустимий ризик</string>
    <string name="RrhzCrit_Rrhz_error">Ймовірний ризик досягнення мети бойових дій не може бути меншим за критичний ризик</string>
    <string name="Djirhz_Nirhz_error">Кожна кількість j-x загроз повинна бути вища за загальну кількість загроз на тій же позиції</string>
    <string name="Kn_error">Довжини масивів повинні бути однакового розміру. Кожна і-та сума показників обсягу заходу повинна бути не менша за кожну можливість і-го типу засобу РХБ захисту. Кожна i-та кількість озброєння і засобів РХБ захисту повинна бути не більшою за результат ділення і-тої суми показників обсягу заходу та можливість і-го типу засобу.</string>
    <string name="N200_N300_error">Загальна кількість особового складу повинна бути більша за суму можливих втрат</string>
    <string name="Cn_error">Довжини масивів повинні бути однакового розміру.</string>
    <string name="N0iv_Nob_error">Сума кількості об\'єктів, які можливо будуть виявлені противником, не може бути більшою за загальну кількість об\'єктів</string>
    <string name="Nur_Nos_error">Загальна кількість особового складу повинна бути більша за кількість ураженого особового складу</string>
    <string name="Pv_error">Довжини масивів повинні бути однакового розміру. Кожна і-та сума кількості j-х загроз повинна бути не менша за кожну загальну кількість визначених загроз.</string>
    <string name="Niv_Nob_error">Сума кількості об\'єктів не може бути більша за загальну кількість об\'єктів.</string>
    <string name="Pvam_error">Довжини масивів повинні бути однакового розміру. Кожна сума кількості j-х загроз виявлення і-го об’єкту за даними розвідки не може бути більша за загальну кількість визначених загроз.</string>
    <string name="Rv_R0_error">Імовірність виявлення об\'єктів противником має бутит більша за показник допустимого ризику</string>
    <string name="fragment_r0_v0">Показник імовірності РХ зараження особового складу підрозділів</string>
    <string name="fragment_r0_p0">Показник максимально допустимої уразливості особового складу підрозділів в умовах РХ зараження</string>
    <string name="fragment_r0_mod_title">Показник допустимого ризику досягнення мети бойових дій щодо виявлення об’єктів противником для ураження</string>
    <string name="fragment_r0_mod_p0">Показник імовірності виявлення об’єктів противником.</string>
    <string name="fragment_r0_mod_v0">Показник максимально допустимої частки можливого виявлення об’єктів противником для ураження.</string>
    <string name="fragment_v0_title">Показник максимально допустимої уразливості особового складу підрозділів в умовах РХ зараження</string>
    <string name="fragment_v0_Nivt">Кількість особового складу військової частини, яка ймовірно втратить життя та здоров’я в умовах РХ зараження</string>
    <string name="fragment_v0_Nos">Загальна кількість особового складу</string>
    <string name="fragment_vhbrya_rhz_op_title">Уразливість особового складу в умовах РХ зараження по закінченню оборонних бойових дій</string>
    <string name="fragment_vhbrya_rhz_op_Nur">Кількість особового складу , які втратили життя і здоров’я в умовах РХ зараження.</string>
    <string name="fragment_vhbrya_rhz_op_Nos">Загальна кількість особового складу.</string>
    <string name="fragment_En_title">Показник ефективності виконання кожного завдання системи ХБРЯ захисту</string>
    <string name="fragment_En_r0">Допустимий ризик досягнення мети бойових дій щодо n-го завдання системи ХБРЯ захисту</string>
    <string name="fragment_En_Rn">Імовірний ризик досягнення мети бойових дій до планування n-го завдання системи ХБРЯ захисту або очікуваний ризик досягнення мети бойових дій після планування n-го завдання системи ХБРЯ захисту</string>
    <string name="Rrhz">Показник ймовірного ризику досягнення мети бойових дій щодо втрати життя і здоров’я особового складу підрозділів в умовах РХ зараження</string>
    <string name="Prhz">Показник імовірності РХ зараження особового складу підрозділів</string>
    <string name="Vrhz">Показник уразливості особового складу підрозділів в умовах РХ зараження</string>
    <string name="R0">Показник допустимого ризику досягнення мети бойових дій щодо втрати життя і здоров’я особового складу в умовах РХ зараження</string>
    <string name="RrhzCrit">Показник критичного ризику досягнення мети бойових дій щодо втрати життя і здоров’я особового складу в умовах РХ зараження</string>
    <string name="fragment_EhbryaNec_title">Обчислення необхідної ефективності виконання заходів ХБРЯ захисту</string>
    <string name="fragment_Ehbrya0_title">Обчислення ефективності виконання заходів ХБРЯ захисту військовими частинами без підрозділів РХБ захисту</string>
    <string name="fragment_Whbrya_title">Визначення загального обсягу завдань відповідно до РХ загроз</string>
    <string name="Wvo">Показник обсягу заходів щодо виявлення та оцінювання РХБ обстановки</string>
    <string name="Wpg">Показник обсягу заходів щодо підтримання живучості військ в умовах РХ зараження</string>
    <string name="Wln">Показник обсягу заходів щодо ліквідації наслідків РХ зараження</string>
    <string name="fragment_Wvo_Wrhr">Показник обсягу РХ розвідки та спостереження</string>
    <string name="fragment_Wvo_Wrhk">Показник обсягу РХ контролю</string>
    <string name="fragment_Wwo_W0">Показник обсягу РХ контролю</string>
    <string name="fragment_Wpg_Wop">Показник обсягу оповіщення про зміни в РХ обстановки</string>
    <string name="fragment_Wpg_Wzikz">Показник обсягу застосування засобів індивідуального та колективного захисту</string>
    <string name="fragment_Wpg_Wpoz">Показник обсягу режимно-обмежувальних заходів</string>
    <string name="fragment_Wln_Wos">Показник обсягу оповіщення про зміни в РХ обстановки</string>
    <string name="fragment_Wln_Wovt">Показник обсягу застосування засобів індивідуального та колективного захисту</string>
    <string name="fragment_Wln_Wm">Показник обсягу режимно-обмежувальних заходів</string>
    <string name="fragment_Prhz_title">Показник імовірності РХ зараження особового складу підрозділів</string>
    <string name="fragment_Prhz_djirhz">Кількість j-х загроз РХ зараження і-ї військової частини за даними розвідки. Через кому</string>
    <string name="fragment_Prhz_nirhz">Загальна кількість визначених загроз, реалізація яких 100 % призведе до втрат особового складу і-ї військової частини в умовах РХ зараження. Через кому.</string>
    <string name="fragment_Kn_title">Визначення складу батальйонної тактичної групи РХБ захисту відповідно до норм забезпечення озброєння і засобів РХБ захисту, штатним складом</string>
    <string name="fragment_Kn_Wi">Сума показників обсягу j-го заходу, який виконується і-м типом засобу РХБ захисту. Через кому.</string>
    <string name="fragment_Kn_Ai">Можливості і-го типу засобу РХБ захисту. Через кому</string>
    <string name="fragment_Kn_Nium">Кількість озброєння і засобів РХБ захисту і-го типу відповідно до штатних норм забезпечення роти (взводу). Через кому.</string>
    <string name="fragment_vhrz_title">Показник максимально допустимої уразливості особового складу підрозділів в умовах РХ зараження.</string>
    <string name="fragment_vhrz_N200">Можливі втрати життя особового складу і-ї військової частини в умовах РХ зараження. Через кому.</string>
    <string name="fragment_vhrz_N300">Можливі втрати здоров’я особового складу і-ї військової частини в умовах РХ зараження. Через кому.</string>
    <string name="fragment_vhrz_Nos">Загальна кількість особового складу</string>
    <string name="fragment_Cn_title">Вартість варіанту дій за складом сил і засобів Б(Р)ТГр РХБ захисту</string>
    <string name="fragment_Cn_Ci">Вартість одного засобу РХБ захисту і-го типу. Через кому.</string>
    <string name="fragment_Cn_Ni">Загальна кількість засобів РХБ захисту і-го типу. Через кому</string>
    <string name="fragment_Ehbrya_title">Вартість варіанту дій за складом сил і засобів Б(Р)ТГр РХБ захисту</string>
    <string name="fragment_Ehbrya_RrhzCritOch">Показник очікуваного критичного ризику досягнення мети бойових дій щодо втрати життя і здоров’я особового складу підрозділів в умовах РХ зараження після планування заходів ХБРЯ захисту</string>
</resources>