<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/navigation_home" />
        <item
            android:id="@+id/nav_rif"
            android:title="@string/navigation_rif" />
        <item
            android:id="@+id/nav_hostiles_indicator"
            android:title="@string/navigation_hostiles_indicator" />
        <item
            android:id="@+id/nav_v0"
            android:title="@string/navigation_v0" />
        <item
            android:id="@+id/nav_En"
            android:title="@string/navigation_En" />
        <item
            android:id="@+id/nav_Rrhz"
            android:title="@string/navigation_Rrhz" />
        <item
            android:id="@+id/nav_RrhzCrit"
            android:title="@string/navigation_RrhzCrit" />
        <item
            android:id="@+id/nav_EhbryaNec"
            android:title="@string/navigation_EhbryaNec" />
        <item
            android:id="@+id/nav_Ehbrya0"
            android:title="@string/navigation_Ehbrya0" />
        <item
            android:id="@+id/nav_Whbrya"
            android:title="@string/navigation_Whbrya" />
    </group>
</menu>